# robodeploy

./: .gitignore  CLAUDE.md  MUJOCO_LOG.TXT  README.md  README_CN.md  pyproject.toml
docs/superpowers/plans/: 2026-07-15-smoothing-rtc-driver-unification-plan.md
docs/superpowers/specs/: 2026-07-15-smoothing-rtc-driver-unification-design.md
examples/arx/: record_arx_bimanual.sh
examples/innov/: README.md  record_dataset_innov.sh  record_innov.sh  set_motor_zero.py  test_master_slave.py
examples/s1/: inspect_policy_action.sh  record_dataset.sh  record_dataset_rtc.sh  rlt_bridge.sh
scripts/: README.md  binarize_gripper.py  compare_state_action.py  copy_state_to_action.py  data_augment.py  filter_lerobot_dataset.py  filter_valid_episodes.py  inspect_policy_action.py  inspect_policy_action.sh  merge_lerobot_datasets.py  record_arx_bimanual.sh  record_body_teaching.py  record_config.py  record_config_body_teaching.py  record_dataset.py  record_dataset.sh  record_hybrid.py  record_s1_inference.py  record_s1_inference_npy.py  record_teleop.py  regenerate_stats.py  replay_actions.py  smoke_test_rtc.py  space_mirroring.py  split_by_position.py  stack_front_cameras.py  test_joint_direction.py  test_webui.py
src/lerobot_mini/: __init__.py  constants.py
src/lerobot_mini/cameras/opencv/: camera_opencv.py
src/lerobot_mini/cameras/realsense/: camera_realsense.py
src/lerobot_mini/configs/: default.py  parser.py
src/lerobot_mini/datasets/: async_writer.py  compute_stats.py  factory.py  online_buffer.py  utils.py
src/lerobot_mini/datasets/push_dataset_to_hub/: utils.py
src/lerobot_mini/datasets/v2/: convert_dataset_v1_to_v2.py
src/lerobot_mini/datasets/v21/: _remove_language_instruction.py  batch_convert_dataset_v20_to_v21.py  convert_dataset_v20_to_v21.py
src/lerobot_mini/motors/: calibration_gui.py
src/lerobot_mini/motors/feetech/: feetech.py
src/lerobot_mini/policy_clients/: base.py  config.py  utils.py
src/lerobot_mini/policy_clients/openpi/: __init__.py  action_chunk_broker.py  client.py
src/lerobot_mini/robots/: robot.py  utils.py
src/lerobot_mini/robots/bi_s1_follower/: __init__.py  bi_s1_follower.py  config_bi_s1_follower.py
src/lerobot_mini/robots/bi_so100_follower/: bi_so100_follower.py
src/lerobot_mini/robots/hope_jr/: hope_jr_arm.py  hope_jr_hand.py
src/lerobot_mini/robots/koch_follower/: config_koch_follower.py  koch_follower.py
src/lerobot_mini/robots/lekiwi/: lekiwi_client.py
src/lerobot_mini/robots/s1_follower/: s1_follower.py
src/lerobot_mini/robots/so100_follower/: config_so100_follower.py
src/lerobot_mini/robots/so101_follower/: so101_follower.py
src/lerobot_mini/robots/stretch3/: robot_stretch3.py
src/lerobot_mini/robots/viperx/: config_viperx.py
src/lerobot_mini/teleoperators/: teleoperator.py  utils.py
src/lerobot_mini/utils/: control_utils.py  keyboard_control.py  logging_utils.py
src/lerobot_mini/webui/: __init__.py  server.py
src/robodeploy/: __init__.py  __version__.py  constants.py  find_cameras.py  find_port.py
src/robodeploy/cameras/: utils.py
src/robodeploy/configs/: default.py  parser.py
src/robodeploy/datasets/: async_writer.py  compute_stats.py  factory.py  lerobot_dataset.py  npy_backend.py  online_buffer.py  utils.py  video_utils.py
src/robodeploy/motors/: calibration_gui.py  motors_bus.py
src/robodeploy/policy_clients/: __init__.py  base.py  utils.py
src/robodeploy/robots/: robot.py  utils.py
src/robodeploy/rtc/: __init__.py  action_interpolator.py  action_queue.py  configuration_rtc.py  debug_tracker.py  debug_visualizer.py  latency_tracker.py  modeling_rtc.py  relative.py
src/robodeploy/scripts/: __init__.py  binarize_gripper.py  delete_episodes.py  filter_lerobot_dataset.py  filter_valid_episodes.py  merge_lerobot_datasets.py  reassign_tasks.py  record_body_teaching.py  record_config.py  record_config_body_teaching.py  record_dataset.py  rl_robot_bridge.py  space_mirroring.py  stack_front_cameras.py
src/robodeploy/teleoperators/: teleoperator.py
src/robodeploy/utils/: control_utils.py  leader_follower_align.py  logging_utils.py  random_utils.py  stream_buffer.py
src/robodeploy/webui/: server.py
tests/: conftest.py  utils.py
tests/cameras/: test_opencv.py  test_realsense.py
tests/datasets/: test_compute_stats.py  test_datasets.py  test_delta_timestamps.py  test_image_transforms.py  test_image_writer.py  test_online_buffer.py  test_sampler.py  test_utils.py  test_visualize_dataset.py
tests/fixtures/: constants.py  dataset_factories.py  files.py  hub.py
tests/motors/: test_dynamixel.py  test_feetech.py  test_motors_bus.py
tests/robots/: test_so100_follower.py
tests/utils/: test_stream_buffer.py
(+93 files in other folders)
