# Copyright 2024 The robodeploy contributors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



[project]
name = "robodeploy"
version = "0.1.0"
description = "Robotics deployment and data collection toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "lynn" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["robotics", "machine learning", "artificial intelligence", "deployment"]

dependencies = [
    # Hugging Face datasets & hub
    "datasets>=2.19.0,<=3.6.0",
    "huggingface-hub[hf-transfer,cli]>=0.34.2",

    # Core dependencies
    "av>=14.2.0",
    "cmake>=3.29.0.1",
    "deepdiff>=7.0.1,<9.0.0",
    "draccus==0.10.0",
    "flask>=3.0.3,<4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
    "jsonlines>=4.0.0",
    "opencv-python-headless>=4.9.0",
    "packaging>=24.2",
    "pynput>=1.7.7",
    "pyserial>=3.5",
    "torch>=2.2.1",
    "torchcodec>=0.2.1; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')) and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "torchvision>=0.21.0",

    # Policy client dependencies
    "websockets>=12.0",
    "msgpack>=1.0.0",
    "typing_extensions>=4.0.0",

    # Data collection dependencies
    "h5py>=3.0.0",
    "pyarrow>=10.0.0",
]

# Optional dependencies
[project.optional-dependencies]

# Motors
feetech = ["feetech-servo-sdk>=1.0.0"]
dynamixel = ["dynamixel-sdk>=3.7.31"]

# Robots
gamepad = ["robodeploy[pygame-dep]", "hidapi>=0.14.0"]
hopejr = ["robodeploy[feetech]", "robodeploy[pygame-dep]"]
lekiwi = ["robodeploy[feetech]", "pyzmq>=26.2.1"]
intelrealsense = [
    "pyrealsense2>=2.55.1.6486 ; sys_platform != 'darwin'",
    "pyrealsense2-macosx>=2.54 ; sys_platform == 'darwin'",
]

# Common
pygame-dep = ["pygame>=2.5.1"]

# Development
dev = ["pre-commit>=3.7.0", "debugpy>=1.8.1"]
test = ["pytest>=8.1.0", "pytest-timeout>=2.4.0", "pytest-cov>=5.0.0", "mock-serial>=0.0.1 ; sys_platform != 'win32'"]

# All
all = [
    "robodeploy[dynamixel]",
    "robodeploy[gamepad]",
    "robodeploy[hopejr]",
    "robodeploy[lekiwi]",
    "robodeploy[intelrealsense]",
    "robodeploy[dev]",
    "robodeploy[test]",
]

# ---------------- Tool Configurations ----------------
[project.scripts]
lerobot-find-cameras = "robodeploy.find_cameras:main"
lerobot-find-port = "robodeploy.find_port:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 110
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "T20", "N"
]
ignore = [
    "E501",
    "T201",
    "T203",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["robodeploy"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "src/robodeploy/datasets/push_dataset_to_hub",
    "src/robodeploy/datasets/v2/convert_dataset_v1_to_v2",
]
skips = ["B101", "B311", "B404", "B603", "B615"]

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
default.extend-ignore-identifiers-re = [
    "2nd",
    "pn",
    "ser",
    "ein",
]
